Add pages/reports.html 1741535914110

--- a/pages/reports.html
+++ b/pages/reports.html
@@ -244,5 +244,7 @@
     <script src="../js/userSettings.js"></script>
     <script src="../js/cargo.js"></script>
     <script src="../js/modal.js"></script>
+    <script src="../js/masterConfig.js"></script>
+    <script src="../js/masterConfigUI.js"></script>
 </body>
 </html>
