Add index.html 1741536020157

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
     <script src="js/userSettings.js"></script>
     <script src="js/cargo.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/masterConfig.js"></script>
+    <script src="js/masterConfigUI.js"></script>
 
     <script>
         // Initialize systems when document is ready
